--- a/src/app/components/home/Home.module.css
+++ b/src/app/components/home/Home.module.css
@@ -146,9 +146,9 @@
 
 .messageContainer {
 	position: relative;
+	margin: 0 auto;
 	width: 32.25rem;
 	height: 10.1875rem;
-	margin: 0 auto;
 }
 
 .message {
@@ -169,10 +169,9 @@
 	font-family: Montserrat;
 }
 
-.message::focus {
-	outline-color: transparent;
-	outline-style: solid;
-	box-shadow: 0 0 0 4px #5a01a7;
+.message:focus {
+	border: 3px solid var(--green);
+	outline: none;
 }
 
 .message::-webkit-resizer{
