--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -11,8 +11,8 @@ $maxWidthContainer: 1170
 			#{$property}: $startSize + px
 			@media (min-width: #{$maxWidthContainer + px})
 				#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}))
-			@else
-	      #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}))
+		@else
+			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}))
 
 :root
 	--max-width: 1920px
@@ -35,7 +35,7 @@ $maxWidthContainer: 1170
 html,
 body
 	max-width: 100vw
-	/* overflow-x: hidden; */
+	overflow-x: hidden
 
 body
 	color: rgb(var(--black))
