--- a/src/app/components/home/Home.module.sass
+++ b/src/app/components/home/Home.module.sass
@@ -1,15 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap')
+@import '../../adaptive.sass'
 
 .home
 	display: flex
 	flex-direction: row
 	align-items: center
 	justify-content: center
+	flex-wrap: wrap
 	gap: 30px
 
 	width: 100%
-	height: 37.125rem
+	height: 594px
 	background-color: var(--dark1)
+
+	&Img
+		position: relative
+		@include adaptiv("width", 520, 382, 1)
+		@include adaptiv("height", 360, 260, 1)
+
+	@media screen and (max-width: 1440px)
+		@include adaptiv("height", 900, 1151, 1)
 
 .caption
 	display: flex
