--- a/src/app/adaptive.sass
+++ b/src/app/adaptive.sass
@@ -6,10 +6,10 @@ $maxWidthContainer: 1170
 	@if $type==1
 		#{$property}: $startSize + px
 		@media (max-width: #{$maxWidthContainer + px})
-			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 414px) / #{$maxWidthContainer - 414}))
+			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}))
 	@else if $type==2
 		#{$property}: $startSize + px
-		@media (min-width: #{$maxWidthContainer + px})
-			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 414px) / #{$maxWidth - 414}))
+		@media (max-width: #{$maxWidthContainer + px})
+			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 600px) / #{$maxWidthContainer - 600}))
 	@else
 		#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 414px) / #{$maxWidth - 414}))
