--- a/src/app/components/header/Header.module.sass
+++ b/src/app/components/header/Header.module.sass
@@ -24,8 +24,8 @@
 	&Img
 		position: relative
 		width: 100%
-		@include adaptiv("max-width", 266, 170, 1)
-		@include adaptiv("height", 69, 44, 0)
+		@include adaptiv("max-width", 266, 200, 1)
+		@include adaptiv("height", 69, 56, 0)
 
 	&But
 		background-color: var(--green)
@@ -56,7 +56,7 @@
 	.header_burger
 		display: block
 		position: relative
-		width: 30px
+		width: 28px
 		height: 20px
 		z-index: 3
 		cursor: pointer
@@ -97,6 +97,9 @@
 		&.active span
 			transform: scale(0)
 
+		// &:focus
+			
+
 	.header
 		& ul
 			position: fixed
@@ -105,7 +108,7 @@
 			width: 100%
 			height: 100%
 			background-color: var(--green)
-			padding: 100px 10px 20px 10px
+			padding: 100px 10px 20px
 			transition: all 0.3s ease 0s
 			overflow: auto
 
@@ -115,10 +118,9 @@
 
 		li
 			margin: 0px 0px 20px 0px
-			text-transform: uppercase
 			font-size: 120%
 
-@media screen and (max-width: 425px)
+@media screen and (max-width: 426px)
 	.headerBut
 		display: none
 
