--- a/src/app/components/home/Home.module.sass
+++ b/src/app/components/home/Home.module.sass
@@ -8,6 +8,7 @@
 	justify-content: center
 	flex-wrap: wrap
 	gap: 30px
+	padding: 16px
 
 	width: 100%
 	height: 594px
@@ -18,31 +19,39 @@
 		@include adaptiv("width", 520, 382, 1)
 		@include adaptiv("height", 360, 260, 1)
 
-	@media screen and (max-width: 1440px)
-		@include adaptiv("height", 900, 1151, 1)
+	@media screen and (max-width: 1700px)
+		height: 900px
+
+	@media screen and (max-width: 1024px)
+		@include adaptiv("height", 1350, 1151, 1)
 
 .caption
 	display: flex
 	flex-direction: row
 	align-items: center
 	justify-content: space-between
-	font-size: 20px
+	margin: 10px 0 0 0
+	@include adaptiv("font-size", 20, 16, 1)
 
 	p:nth-child(1)
 		color: var(--green)
 		font-weight: 700
+		text-transform: uppercase
 
 	p:nth-child(2)
 		color: #fff
 		font-weight: 400
 
 .aboutMe
-	width: 84.125rem
+	width: 1346px
 	margin: 0 auto
 	padding-top: 100px
 
+	@media screen and (max-width:1024px)
+		@include adaptiv("width",1000, 300, 1)
+
 	& h1
-		font-size: 3.75rem
+		@include adaptiv("font-size", 60, 30, 1)
 		text-align: center
 		font-weight: 400
 		margin-bottom: 20px
@@ -61,11 +70,18 @@
 	text-align: center
 
 .info
-	width: 51rem
 	display: flex
 	flex-direction: row
 	margin: 50px auto 0
 	text-align: center
+	gap: 30px
+
+	div
+		margin: 0 auto
+		width: 230px
+
+	@media screen and (max-width:960px)
+		flex-direction: column
 
 	& div p:nth-child(1)
 		color: var(--green)
@@ -80,8 +96,9 @@
 
 .makeCall
 	margin: 100px auto
-	width: 66.875rem
-	height: 40.4375rem
+	@include adaptiv("width",1070, 300, 1)
+	@include adaptiv("height",647, 703, 1)
+
 	background-color: var(--white)
 	border: 1px solid var(--white)
 	border-radius: 30px
@@ -110,7 +127,7 @@
 		margin: 30px auto
 
 .inputBox
-	width: 32.5rem
+	@include adaptiv("width",520, 300, 1)
 	margin: 50px auto 30px
 
 .userBox
@@ -148,7 +165,7 @@
 .messageContainer
 	position: relative
 	margin: 0 auto
-	width: 32.25rem
+	@include adaptiv("width",516, 320, 1)
 	height: 10.1875rem
 
 .message
